# TraceImage

./: .gitignore  IMG_4809_dewarp.tiproj.json  PLAN.md  PORTING.md  README.md  pyproject.toml  requirements.txt
samples/: IMG_4809_dewarp.tiproj.json
src/traceimage/: __init__.py  main.py  model.py
src/traceimage/core/: __init__.py  calibration.py  contours.py  geometry.py  image_io.py  project_io.py  segmentation.py  svg_export.py  tiling.py  undo.py
src/traceimage/ui/: __init__.py  canvas.py  dialogs.py  editable.py  main_window.py  objects.py
tests/: test_calibration.py  test_contours.py  test_geometry.py  test_project_io.py  test_segmentation.py  test_svg_export.py  test_tiling.py  test_undo.py
