[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "traceimage"
version = "0.1.0"
description = "Trace object outlines from photos and export true-scale SVG with calibration and tiled 1:1 printing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Robert", email = "bobm123@gmail.com" }]
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "PySide6>=6.6",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
traceimage = "traceimage.main:main"

[project.gui-scripts]
traceimage-gui = "traceimage.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
